[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/scripts/ScreenShop.gd" type="Script" id=1]
[ext_resource path="res://assets/font/Run.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/images/ui/arrow_left.png" type="Texture" id=3]
[ext_resource path="res://src/actors/FadeTransition.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/font/Overpass-Regular_18.tres" type="DynamicFont" id=6]
[ext_resource path="res://assets/images/coin_rotated.png" type="Texture" id=7]
[ext_resource path="res://assets/images/tilesets/default.tres" type="TileSet" id=8]
[ext_resource path="res://src/scripts/GameTileMap.gd" type="Script" id=9]

[node name="Shop" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 8 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 12, 2, 0, 65536, 0, 0, 65548, 2, 0, 131072, 0, 0, 131084, 2, 0, 196608, 0, 0, 196620, 2, 0, 262144, 0, 0, 262156, 2, 0, 327680, 0, 0, 327692, 2, 0, 393216, 0, 0, 393228, 2, 0, 458752, 0, 0, 458764, 2, 0, 524288, 0, 0, 524300, 2, 0, 589824, 0, 0, 589836, 2, 0, 655360, 0, 0, 655372, 2, 0, 720896, 0, 0, 720908, 2, 0, 786432, 0, 0, 786444, 2, 0, 851968, 0, 0, 851980, 2, 0, 917504, 0, 0, 917516, 2, 0, 983040, 0, 0, 983052, 2, 0, 1048576, 0, 0, 1048588, 2, 0, 1114112, 0, 0, 1114124, 2, 0, 1179648, 0, 0, 1179649, 6, 0, 1179650, 6, 0, 1179651, 6, 0, 1179652, 6, 0, 1179653, 6, 0, 1179654, 6, 0, 1179655, 6, 0, 1179656, 6, 0, 1179657, 6, 0, 1179658, 6, 0, 1179659, 6, 0, 1179660, 2, 0 )
script = ExtResource( 9 )

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -176.0
margin_top = 24.0
margin_right = 176.0
margin_bottom = 154.0
custom_fonts/font = ExtResource( 2 )
text = "TITLE_SHOP"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="."]
margin_left = 32.0
margin_right = 94.0
margin_bottom = 56.0
mouse_default_cursor_shape = 2
icon = ExtResource( 3 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoinsContainer" type="HBoxContainer" parent="."]
margin_left = 40.0
margin_top = 136.0
margin_right = 200.0
margin_bottom = 166.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoinImage" type="TextureRect" parent="CoinsContainer"]
margin_right = 20.0
margin_bottom = 30.0
texture = ExtResource( 7 )

[node name="CoinsLabel" type="Label" parent="CoinsContainer"]
margin_left = 30.0
margin_right = 130.0
margin_bottom = 30.0
rect_min_size = Vector2( 100, 30 )
size_flags_vertical = 5
custom_fonts/font = ExtResource( 6 )
text = "0"
valign = 1

[node name="Grid" type="GridContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 64.0
margin_top = 192.0
margin_right = -64.0
margin_bottom = -64.0
columns = 2

[node name="FadeTransition" parent="." instance=ExtResource( 5 )]
visible = false
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="animation_finished" from="FadeTransition" to="." method="_on_FadeTransition_animation_finished"]
